--- a/theycallmebitch/frontend/render.yaml
+++ b/theycallmebitch/frontend/render.yaml
@@ -1,24 +1,14 @@
 services:
-  # Backend Service
-  - type: web
-    name: dashboard-aguas-ancud-backend
-    env: python
-    plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
-    rootDir: theycallmebitch/backend
-    envVars:
-      - key: CORS_ORIGIN
-        value: https://dashboard-aguas-ancud-frontend.onrender.com
-
   # Frontend Service
   - type: web
     name: dashboard-aguas-ancud-frontend
-    env: static
+    env: node
     plan: free
-    buildCommand: npm install && npm run build
-    staticPublishPath: ./dist
-    rootDir: theycallmebitch/frontend
+    buildCommand: chmod +x build.sh && ./build.sh
+    startCommand: cd theycallmebitch/frontend && npx serve -s dist -l $PORT
+    rootDir: .
     envVars:
       - key: VITE_API_URL
-        value: https://dashboard-aguas-ancud-backend.onrender.com 
+        value: https://dashboard-aguas-ancud-backend.onrender.com
+      - key: NODE_ENV
+        value: production 
