--- a/theycallmebitch/frontend/package.json
+++ b/theycallmebitch/frontend/package.json
@@ -25,12 +25,12 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.8.0",
     "recharts": "^2.15.4",
-    "serve": "^14.2.1"
+    "serve": "^14.2.1",
+    "vite": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0"
+    "@vitejs/plugin-react": "^3.1.0"
   }
 }
