Configuración completa para despliegue en Render

--- a/theycallmebitch/backend/render.yaml
+++ b/theycallmebitch/backend/render.yaml
@@ -10,3 +10,17 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
+      - key: CORS_ORIGIN
+        value: https://dashboard-aguas-ancud-frontend.onrender.com
+
+  # Frontend Service
+  - type: web
+    name: dashboard-aguas-ancud-frontend
+    env: static
+    plan: free
+    buildCommand: npm install && npm run build
+    staticPublishPath: ./dist
+    rootDir: ../frontend
+    envVars:
+      - key: VITE_API_URL
+        value: https://dashboard-aguas-ancud-backend.onrender.com
