--- a/theycallmebitch/backend/requirements.txt
+++ b/theycallmebitch/backend/requirements.txt
@@ -1,4 +1,7 @@
-fastapi
-uvicorn
-pandas
-requests 
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pandas==2.1.3
+requests==2.31.0
+numpy==1.24.3
+python-multipart==0.0.6
+python-dotenv==1.0.0 
