--- a/render.yaml
+++ b/render.yaml
@@ -14,8 +14,9 @@ services:
         value: https://dashboard-aguas-ancud-frontend.onrender.com
 
   # Frontend Service
-  - type: static-site
+  - type: static
     name: dashboard-aguas-ancud-frontend
+    env: static
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
     rootDir: theycallmebitch/frontend
